Implement Knut's feedback